Capturing animations is much smoother using PNG8's APNG support

--- a/.gitignore
+++ b/.gitignore
@@ -125,4 +125,5 @@ Thumbs.db
 /ios-moe/xcode/native/
 core/assets/screenshots/
 core/assets/gifexport/
+core/assets/pngexport/
 core/assets/.gifimages/
